--- a/index.html
+++ b/index.html
@@ -7,13 +7,10 @@
 
 <body>
 
-  <h1>Welcome to Our Company</h1>
-  <h2>Web Site Main Ingredients:</h2>
+  <h1>Welcome on BlackPhoenixNetwork</h1>
+  <h2>Coming soon</h2>
 
-  <p>Pages (HTML)</p>
-  <p>Style Sheets (CSS)</p>
-  <p>Computer Code (JavaScript)</p>
-  <p>Live Data (Files and Databases)</p>
+  <p>[Discord](https://dsc.gg/blackphoenix)</p>
 
 </body>
 </html>
