--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en-US">
-  <link type="text/css" rel="BlackPhoenixNetwork" href="BlackPhoenixNetwork/main.css" />
+    <head>
+    <meta charset="utf-8">
+    <title>BlackPhoenixNetwork</title>
+    <link type="text/css" rel="BlackPhoenixNetwork" href="BlackPhoenixNetwork/main.css" />
+  </head>
 <body>
 
 <div class=e1_2>
