--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
     <meta charset="utf-8">
     <title>BlackPhoenixNetwork</title>
-    <link type="text/css" rel="BlackPhoenixNetwork" href="BlackPhoenixNetwork/main.css" />
+    <link rel="stylesheet" type = "text/css" href="style.css">
   </head>
 <body>
 
