--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
   </head>
 <body>
 
-<div class=e1_2>
-  <div class="e1_16"></div>
-  <div class="e1_18"></div><span  class="e101_2">BlackPhoenixNetwork</span>
-</div>
+<span  class="e101_2">BlackPhoenixNetwork</span>
 
 </body>
 </html>
