--- a/index.html
+++ b/index.html
@@ -7,16 +7,7 @@
   </head>
 <body>
 
-<div class=e1_2>
-  <div class="e1_16"></div>
-  <div class="e104_8"></div>
-  <div class="e104_2"></div>
-  <div class="e104_7"></div>
-  <div class="e104_9"></div><span  class="e104_10">Test</span><span  class="e104_12">Test</span>
-  <div class="e104_11"></div>
-  <div class="e1_18"></div>
-  <div class="e104_3"></div><span  class="e101_2">BlackPhoenixNetwork</span>
-</div>
+<iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FL9RmmJNvnmJquSJKw7fSqz%2FUntitled%3Fnode-id%3D1%253A2%26scaling%3Dmin-zoom%26page-id%3D0%253A1" allowfullscreen></iframe>
     
 </body>
 </html>
