--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <title>BlackPhoenixNetwork</title>
     <link rel="stylesheet" type = "text/css" href="style.css">
-  </head>
+    <script src="js/jquery.index.js">
+    </head>
 <body>
 
 <div class=browserwindow_1_2>
