--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>BlackPhoenixNetwork</title>
     <link rel="stylesheet" type = "text/css" href="style.css">
-    <script src="index.js">
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     </head>
 <body>
 
