--- a/index.html
+++ b/index.html
@@ -41,6 +41,6 @@ function quest_106928_features () {
     0
 0
 </script>
-    
+    <script src="script.js" type="text/JavaScript"></script>
 </body>
 </html>
