--- a/index.html
+++ b/index.html
@@ -7,30 +7,7 @@
     </head>
 <body>
 
-<div class=website_3_12>
-  <div class=home_screen_3_49>
-    <div class="home_screen_3_5"></div>
-    <div class=home_box_3_3_42>
-      <div class="box_home_box_1_3_43"></div>
-      <div class="button_home_box_1_3_44"></div><span  class="buttontext_home_box_1_3_45">Information</span><span  class="text_home_box_1_3_46">Informations here</span>
-      <div class="image_home_box_1_3_47"></div>
-    </div>
-    <div class=home_box_2_3_36>
-      <div class="box_home_box_1_3_37"></div>
-      <div class="button_home_box_1_3_38"></div><span  class="buttontext_home_box_1_3_39">Information</span><span  class="text_home_box_1_3_40">Informations here</span>
-      <div class="image_home_box_1_3_41"></div>
-    </div>
-    <div class=home_box_1_3_35>
-      <div class="box_home_box_1_3_6"></div>
-      <div class="button_home_box_1_3_13"></div><span  class="buttontext_home_box_1_3_14">Information</span><span  class="text_home_box_1_3_15">A text can be any example of written or spoken language, from something as complex as a book or legal document.</span>
-      <div class="image_home_box_1_3_8"></div>
-    </div>
-    <div class="image_home_main_3_7"></div>
-  </div>
-  <div class="topbar_2_3"></div><span  class="blackphoenixnetwork_3_53">BlackPhoenixNetwork</span>
-  <div class="sidebar_2_4"></div>
-  <div class="rectangle_1_3_54"></div><span  class="home_3_55">Home</span>
-</div>
+<iframe style="border: 0px solid rgba(0, 0, 0, 0.1);" width="1920" height="1080" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FFIxdAjru78fZ4KWDYU0fzg%2FUntitled%3Fnode-id%3D3%253A12%26scaling%3Dcontain%26page-id%3D0%253A1%26starting-point-node-id%3D3%253A12" allowfullscreen></iframe>
     
 <script src="script.js" type="text/JavaScript"></script>
 </body>
