--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
 <body>
 
-<iframe style="border: 0px solid rgba(0, 0, 0, 0.1);" width="1920" height="1080" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FFIxdAjru78fZ4KWDYU0fzg%2FUntitled%3Fnode-id%3D3%253A12%26scaling%3Dcontain%26page-id%3D0%253A1%26starting-point-node-id%3D3%253A12" allowfullscreen></iframe>
+<iframe style="border: 0oto%2FFIxdAjru78fZ4KWDYU0fzg%2FUntitled%3Fnode-id%3D3%253A12%26scaling%3Dcontain%26page-id%3D0%253A1%26starting-point-node-id%3D3%253A12" allowfullscreen></iframe>
     
 <script src="script.js" type="text/JavaScript"></script>
 </body>
