--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
 <iframe style="border: 0oto%2FFIxdAjru78fZ4KWDYU0fzg%2FUntitled%3Fnode-id%3D3%253A12%26scaling%3Dcontain%26page-id%3D0%253A1%26starting-point-node-id%3D3%253A12" allowfullscreen></iframe>
     
 <script src="script.js" type="text/JavaScript"></script>
-<script src='https://cdn.jsdelivr.net/npm/@widgetbot/crate@3' async defer>
-	new Crate({
-		server: '646222573167837215', // BlackPhoenixNetwork
-		channel: '832555457528070164' // #╠📬》einladungen
-	})
-</script>
+<widgetbot
+  server="646222573167837215"
+  channel="832555457528070164"
+  width="800"
+  height="600"
+></widgetbot>
+<script src="https://cdn.jsdelivr.net/npm/@widgetbot/html-embed"></script>
 </body>
 </html>
