--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <widgetbot
   server="646222573167837215"
   channel="832555457528070164"
-  width="1080"
-  height="700"
+  width="100%"
+  height="100%"
 ></widgetbot>
 <script src="https://cdn.jsdelivr.net/npm/@widgetbot/html-embed"></script>
 </body>
