--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <html lang="en-US">
     <head>
     <meta charset="utf-8">
+       <style type="text/css">
+        html, body {
+            height: 100%;
+            margin: 0;
+        }
+
+        #wrapper {
+            min-height: 100%; 
+        }
+    </style>
     <title>BlackPhoenixNetwork</title>
     <link rel="stylesheet" type = "text/css" href="style.css">
     </head>
