--- a/index.html
+++ b/index.html
@@ -1,29 +1,14 @@
 <!DOCTYPE html>
-<html lang="en-US">
-    <head>
-    <meta charset="utf-8">
-       <style type="text/css">
-        html, body {
-            height: 100%;
-            margin: 0;
-        }
-
-        #wrapper {
-            min-height: 100%; 
-        }
-    </style>
-    <title>BlackPhoenixNetwork</title>
-    <link rel="stylesheet" type = "text/css" href="style.css">
-    </head>
+<html>
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Website Offline</title>
+    <link rel="stylesheet" href="css">
+</head>
 <body>
-    
-<script src="script.js" type="text/JavaScript"></script>
-<widgetbot
-  server="646222573167837215"
-  channel="832555457528070164"
-  width="100%"
-  height="100%"
-></widgetbot>
-<script src="https://cdn.jsdelivr.net/npm/@widgetbot/html-embed"></script>
+  <div class="loader"></div>
 </body>
+  
+  
+  
 </html>
