--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             min-height: 100%; 
         }
     </style>
-    <title>BlackPhoenixNetwork</title>
+    <title>AviosiumNetwork</title>
     <link rel="stylesheet" type = "text/css" href="style.css">
     </head>
 <body>
