--- a/index.html
+++ b/index.html
@@ -16,14 +16,11 @@
     <link rel="stylesheet" type = "text/css" href="style.css">
     </head>
 <body>
-    
-<script src="script.js" type="text/JavaScript"></script>
-<widgetbot
-  server="646222573167837215"
-  channel="832555457528070164"
-  width="100%"
-  height="100%"
-></widgetbot>
-<script src="https://cdn.jsdelivr.net/npm/@widgetbot/html-embed"></script>
+<script src='https://cdn.jsdelivr.net/npm/@widgetbot/crate@3' async defer>
+    new Crate({
+        server: '646222573167837215', // AviosiumNetwork
+        channel: '722422268025897011' // #╠🤖》bot_commands
+    })
+</script>
 </body>
 </html>
