--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
     <link rel="stylesheet" type = "text/css" href="style.css">
     </head>
 <body>
-<script src='https://cdn.jsdelivr.net/npm/@widgetbot/crate@3' async defer>
-    new Crate({
-        server: '646222573167837215', // AviosiumNetwork
-        channel: '722422268025897011' // #╠🤖》bot_commands
-    })
-</script>
+    <widgetbot
+      server="299881420891881473"
+      channel="355719584830980096"
+      width="800"
+      height="600"
+    ></widgetbot>
+    <script src="https://cdn.jsdelivr.net/npm/@widgetbot/html-embed"></script>
 </body>
 </html>
