--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     </head>
 <body>
     <widgetbot
-      server="299881420891881473"
-      channel="355719584830980096"
-      width="800"
-      height="600"
+      server="646222573167837215"
+      channel="739018192793501736"
+      width="100%"
+      height="100%"
     ></widgetbot>
     <script src="https://cdn.jsdelivr.net/npm/@widgetbot/html-embed"></script>
 </body>
