--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
       width="100%"
       height="100%"
     ></widgetbot>
-    <script src="https://cdn.jsdelivr.net/npm/@widgetbot/html-embed%22%3E</script>
+    <script src="https://cdn.jsdelivr.net/npm/@widgetbot/html-embed"></script>
 </body>
 </html>
