--- a/index.html
+++ b/index.html
@@ -19,9 +19,12 @@
     <widgetbot
       server="646222573167837215"
       channel="739018192793501736"
-      width="100%"
+      width="80%"
       height="100%"
+      position: left;
     ></widgetbot>
     <script src="https://cdn.jsdelivr.net/npm/@widgetbot/html-embed"></script>
+    
+    <iframe src="https://discord.com/widget?id=646222573167837215&theme=dark" width="100%" height="20%" position: right; allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
 </body>
 </html>
