--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
     ></widgetbot>
     <script src="https://cdn.jsdelivr.net/npm/@widgetbot/html-embed"></script>
     
-    <iframe src="https://discord.com/widget?id=646222573167837215&theme=dark" width="100%" height="20%" position: right; allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+    <iframe src="https://discord.com/widget?id=646222573167837215&theme=dark" width="100%" height="20%" right:0px; allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
 </body>
 </html>
