--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@
       server="646222573167837215"
       channel="739018192793501736"
       width="80%"
+      left:0px;
       height="100%"
-      position: left;
+      top:0px;
     ></widgetbot>
     <script src="https://cdn.jsdelivr.net/npm/@widgetbot/html-embed"></script>
     
-    <iframe src="https://discord.com/widget?id=646222573167837215&theme=dark" width="20%" right:0px; height="100%" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+    <iframe src="https://discord.com/widget?id=646222573167837215&theme=dark" width="20%" right:0px; height="100%" top:0px; allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
 </body>
 </html>
