--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <title>AviosiumNetwork</title>
     <link rel="stylesheet" type = "text/css" href="style.css">
     </head>
-<body>
+<body scroll="no" style="overflow: hidden">
     <widgetbot
       server="646222573167837215"
       channel="739018192793501736"
