--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
         }
     </style>
     <title>AviosiumNetwork</title>
+        <meta content="Embed Title" property="og:title" />
+        <meta content="Site Description" property="og:description" />
+        <meta content="https://embed.com/this-is-the-site-url" property="og:url" />
+        <meta content="https://embed.com/embedimage.png" property="og:image" />
+        <meta content="#43B581" data-react-helmet="true" name="theme-color" />
     <link rel="stylesheet" type = "text/css" href="style.css">
     </head>
 <body scroll="no" style="overflow: hidden">
@@ -26,6 +31,5 @@
     ></widgetbot>
     <script src="https://cdn.jsdelivr.net/npm/@widgetbot/html-embed"></script>
     
-    <iframe src="https://discord.com/widget?id=646222573167837215&theme=dark" width="20%" right:0px; height="100%" top:0px; allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+    <iframe src="https://discord.com/widget?id=646222573167837215&theme=dark" width="20%" right:0px; height="100%" top:px; allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
 </body>
-</html>
