--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
         }
     </style>
     <title>AviosiumNetwork</title>
-        <meta content="Embed Title" property="og:title" />
-        <meta content="Site Description" property="og:description" />
+        <meta content="Aviosium" property="og:title" />
+        <meta content="Aviosiums official website" property="og:description" />
         <meta content="https://embed.com/this-is-the-site-url" property="og:url" />
         <meta content="https://embed.com/embedimage.png" property="og:image" />
-        <meta content="#43B581" data-react-helmet="true" name="theme-color" />
+        <meta content="#FD7D00" data-react-helmet="true" name="theme-color" />
     <link rel="stylesheet" type = "text/css" href="style.css">
     </head>
 <body scroll="no" style="overflow: hidden">
