--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <meta content="Aviosium" property="og:title" />
         <meta content="Aviosiums official website" property="og:description" />
         <meta content="https://embed.com/this-is-the-site-url" property="og:url" />
-        <meta content="https://embed.com/cdn.discordapp.com/attachments/839929839464742983/992082149379420200/logo_with_text.jpg" property="og:image" />
+        <meta content="https://cdn.discordapp.com/attachments/839929839464742983/992082149379420200/logo_with_text.jpg" property="og:image" />
         <meta content="#FD7D00" data-react-helmet="true" name="theme-color" />
     <link rel="stylesheet" type = "text/css" href="style.css">
     </head>
